# docbot

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  README.md  ROADMAP.md  TEAM_PLAN.md  backboardplan.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: ui-ux-designer.md
.docbot/: .gitignore  config.toml
docs/: AGENT_ARCHITECTURE.md  AGENT_DELEGATION_DEBUG_STATUS.md  MIGRATION_NOTES.md
src/docbot/: __init__.py  _viz_html.py  cli.py  explorer.py  git_utils.py  hooks.py  llm.py  mock_viz.py  models.py  orchestrator.py  planner.py  project.py  reducer.py  renderer.py  scanner.py  search.py  server.py  tracker.py  viz_server.py
src/docbot/agents/: __init__.py  file_agent.py  loop.py  notepad.py  scope_agent.py  symbol_agent.py  tools.py
src/docbot/app/: __init__.py  cli.py
src/docbot/exploration/: __init__.py  callbacks.py  graph.py  prompts.py  store.py  tools.py
src/docbot/extractors/: __init__.py  base.py  llm_extractor.py  python_extractor.py  treesitter_extractor.py
src/docbot/git/: __init__.py  diff.py  history.py  hooks.py  project.py
src/docbot/pipeline/: __init__.py  explorer.py  mock.py  orchestrator.py  (+5 more)
tests/: test_agent_exploration_integration.py  test_agent_integration_cli.py  test_exploration_graph.py  test_exploration_prompts.py  test_explorer.py  test_llm_extractor.py  test_pipeline_events.py  test_python_extractor.py  test_renderer_llm_event_loop.py  test_scanner.py  test_treesitter_extractor.py  test_web_pipeline_api.py
webapp/: index.html  package-lock.json  package.json
webapp/src/: App.tsx  index.css  main.tsx
(+28 files in other folders)
